tests/libconfig/libconfig.exp
Error ----------------------------------------------------------- libtest.js:2:5

Cannot call `bar` with `123` bound to `x` because number is incompatible with
string.

Error: libtest.js:2
  2: bar(123);
         ^^^ Cannot call `bar` with `123` bound to `x` because number [1] is incompatible with string [2].
  References:
    2: bar(123);
           ^^^ [1]: number
    1: declare function bar(x: string): void;
                               ^^^^^^ [2]: string. See lib: libB.js:1


Found 1 error
